--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal de notícias</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
-    
+    <header class="container">
+        <nav id="primary" class="grid grid-flow-col">
+            <div>
+                <img src="assets/icons/List.svg" alt="Icone de Menu">
+                <strong>Menu</strong>
+            </div>
+            <div>
+                <img src="assets/icons/Tech News.svg" alt="">
+            </div>
+            <div>
+                <strong>Buscar</strong>
+                <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa de busca">
+            </div>
+        </nav>
+        <nav id="secondary" class="grid grid-flow-col">
+            <a href="#">Inteligência Artificial</a>
+            <a href="#">Blockchain</a>
+            <a href="#">Hologramas</a>
+            <a href="#">Internet</a>
+            <a href="#">Vastíveis</a>
+            <a href="#">Realidade Aumentada</a>
+            <a href="#">Reliade Virtual</a>
+        </nav>
+    </header>
 </body>
+
 </html>
