--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal de notícias</title>
     <link rel="stylesheet" href="styles/index.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -39,7 +45,8 @@
                 <img src="assets/imgs/Image 01.png" alt="">
                 <figcaption>
                     <span class="content-tag">robótica</span>
-                    <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e
+                    <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais
+                        conforto e
                         eficiência
                         nas residências.</h2>
                 </figcaption>
@@ -47,21 +54,48 @@
             </figure>
 
             <div class="grid grid-cols-2 gap-16 ">
-                <div>
-                    <img src="assets/imgs/Image 02.png" alt="">
-                </div>
+                <figure class="card">
+                    <img src="assets/imgs/Image 02.png"
+                        alt="Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!">
 
-                <div>
-                    <img src="assets/imgs/Image 03.png" alt="">
-                </div>
+                    <figcaption>
+                        <span class="content-tag">Hologramas</span>
+                        <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como
+                            vemos nossas telas!</h2>
+                    </figcaption>
+                </figure>
 
-                <div>
-                    <img src="assets/imgs/Image 04.png" alt="">
-                </div>
+                <figure class="card">
+                    <img src="assets/imgs/Image 03.png"
+                        alt="Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.">
 
-                <div>
-                    <img src="assets/imgs/Image 05.png" alt="">
-                </div>
+                    <figcaption>
+                        <span class="content-tag">Internet</span>
+                        <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a
+                            forma como vivemos e nos comunic...</h2>
+                    </figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/imgs/Image 04.png"
+                        alt="Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.">
+
+                    <figcaption>
+                        <span class="content-tag">Vestiveis</span>
+                        <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental,
+                            oferecendo insights valiosos para o b...</h2>
+                    </figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/imgs/Image 05.png" alt="Escolas adotam a tecnologia VR para proporcionar
+                        experiências imersivas, transformando a aprendizagem tradicional.">
+
+                    <figcaption>
+                        <span class="content-tag">Realidade Virtual</span>
+                        <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradic..</h2>
+                    </figcaption>
+                </figure>
             </div>
         </section>
     </main>
