Structuring the most read section of the week.

--- a/index.html
+++ b/index.html
@@ -93,8 +93,53 @@
 
                     <figcaption>
                         <span class="content-tag">Realidade Virtual</span>
-                        <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradic..</h2>
+                        <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas,
+                            transformando a aprendizagem tradic..</h2>
                     </figcaption>
+                </figure>
+            </div>
+        </section>
+
+        <section id="weekle">
+            <header class="grid grid-flow-col">
+                <h3>Mais lidas da semana</h3>
+                <a href="#" class="grid grid-flow-col">
+                    <strong>ver tudo</strong>
+                    <span></span>
+                </a>
+            </header>
+
+            <div class="grid gap-16">
+                <figure>
+                    <span class="content-tag">Veículos</span>
+                    <img src="assets/imgs/Image 06.png"
+                        alt="Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.">
+                    <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos
+                        pessoa...</p>
+                </figure>
+
+                <figure>
+                    <span class="content-tag">hologramas</span>
+                    <img src="assets/imgs/Image 07.png"
+                        alt="Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.">
+                    <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas ...</p>
+                </figure>
+
+
+                <figure>
+                    <span class="content-tag">Realidade Virtual</span>
+                    <img src="assets/imgs/Image 08.png"
+                        alt="Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.">
+                    <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e
+                        experiênci...
+                    </p>
+                </figure>
+
+                <figure>
+                    <span class="content-tag">Internet</span>
+                    <img src="assets/imgs/Image 09.png"
+                        alt="Projeto busca oferecer internet de alta velocidade em áreas remotas atr avés de satélites.">
+                    <p>Projeto busca oferecer internet de alta velocidade em áreas remotas atr avés de satélites.</p>
                 </figure>
             </div>
         </section>
