Applying styles to the most read section of the week.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <span class="content-tag">hologramas</span>
                     <img src="assets/imgs/Image 07.png"
                         alt="Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.">
-                    <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas ...</p>
+                    <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas</p>
                 </figure>
 
 
@@ -131,7 +131,7 @@
                     <img src="assets/imgs/Image 08.png"
                         alt="Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.">
                     <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e
-                        experiênci...
+                        experiênci.
                     </p>
                 </figure>
 
