--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
         </section>
 
-        <div>
+        <aside>
             <div id="ads">
                 <img src="assets/imgs/Ads.png" alt="">
             </div>
@@ -246,7 +246,7 @@
                         <div>
                             <span class="content-tag">Software</span>
                             <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando
-                                práticas ecológicas e prom..</h3>
+                                práticas ecológicas e</h3>
                         </div>
                     </article>
 
@@ -258,7 +258,7 @@
                         <div>
                             <span class="content-tag">Realidade Virtual</span>
                             <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma
-                                experiência sensorial completa,</h3>
+                                experiência sensorial</h3>
                         </div>
                     </article>
 
@@ -269,7 +269,7 @@
                         <div>
                             <span class="content-tag">Criptomoedas</span>
                             <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis,
-                                buscando minimizar o im</h3>
+                                buscando minimizar o</h3>
                         </div>
                     </article>
 
@@ -281,7 +281,7 @@
                         <div>
                             <span class="content-tag">Drones</span>
                             <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas
-                                rápidas, transformando o cen.</h3>
+                                rápidas, transformando o</h3>
                         </div>
                     </article>
 
@@ -293,13 +293,15 @@
                         <div>
                             <span class="content-tag">Inpreção 3D</span>
                             <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos,
-                                revolucionando a medicina e a list</h3>
+                                revolucionando a medicina e</h3>
                         </div>
                     </article>
                 </div>
             </section>
-        </div>
+        </aside>
     </main>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
